# ai-human-token-model

./: NEXT_STEPS.md  README.md  justfile  pyproject.toml
ai_human_token_model/: __init__.py  model.py
docs/: SCENARIOS.md  announcement.md  references.md
notebooks/: main.py
tests/: test_model.py
