[project]
name = "ai-human-token-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "marimo>=0.22.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.9",
    "ty>=0.0.29",
]

[tool.pytest.ini_options]
pythonpath = ["."]
